--- a/group/templates/group/groupList.html
+++ b/group/templates/group/groupList.html
@@ -3,9 +3,6 @@
 {% block title_name %}
 <title>Group List</title>
 {% endblock title_name %}
-{% block import_source %}
-<script src="{% static 'group/js/groupList.js' %}"></script>
-{% endblock import_source %}
 {% load group_extras %}
 {% block body_block %}
 <br>
@@ -14,22 +11,30 @@
     <h2>Group List</h2>
   </div>
   {% if not user_is_anonymous %}
-  <div class="btn-group" data-toggle="buttons-radio" style="float:right">
-    <button id="myGroupButton" type="button" class="btn btn-primary">
-      My Group
-    </button>
-    <button id="allGroupButton" type="button" class="btn btn-primary">
-      All Group
-    </button>
+  <div class="btn-group" style="float:right">
+    <a href="{% url 'group:my_list' %}"> 
+      <button id="myGroupButton" type="button" class="btn btn-primary {{pushB}}">
+        My Group
+      </button>
+    </a>
+    <a href="{% url 'group:list' %}">
+      <button id="allGroupButton" type="button" class="btn btn-primary {{pushA}}">
+        All Group
+      </button>
+    </a>
   </div>
   {% endif %}
   <br>
   <br>
-  <div id="myGroupTable">
-    {% include "group/groupTable.html" with group_list=my_group_list info_id='0' %}
-  </div>
+  {% if request.get_full_path = "/group/my_list/" %}
+    <div id="myGroupTable">
+      {% include "group/groupTable.html" with group_list=my_group_list %}
+    </div>
+  {% endif %}
+  {% if request.get_full_path = "/group/list/" %}
   <div id="allGroupTable">
-    {% include "group/groupTable.html" with group_list=all_group_list info_id='1' %}
+    {% include "group/groupTable.html" with group_list=all_group_list %}
   </div>
+  {% endif %}
 </div>
 {% endblock body_block %}
