--- a/problem/templates/problem/panel.html
+++ b/problem/templates/problem/panel.html
@@ -29,12 +29,12 @@
   {% if user.is_authenticated %}
   <div class="btn-group" role="group" style="float:right;">
     <a href="{% url 'problem:problem' %}?filter=mine">
-      <button type="button" class="btn btn-default">
+      <button type="button" class="btn btn-default {% if mine %}active{% endif %}">
         My Problem
       </button>
     </a>
     <a href="{% url 'problem:problem' %}">
-      <button type="button" class="btn btn-default">
+      <button type="button" class="btn btn-default {% if not mine %}active{% endif %}">
         All Problem
       </button>
     </a>
